--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style type="text/css">
         body {background:#fff;font-family: arial,helvetica,lucida,verdana,sans-serif;margin:0;padding:0;}h1 {background:#f5f5f5;border-top:1px solid #eee;border-bottom:1px solid #eee;margin-top:10%;padding:50px;font-size:1.4em;font-weight:normal;text-align:center;color:#000;}
     </style>
-    
+
 </head>
 <body>
     <h1>Клікніть сюди щоб відправити лист
@@ -39,11 +39,17 @@
 
         console.log(params)
 
+        params.to = params.to || "";
+        params.subject = params.subject || "";
+        params.body = params.body || "";
+
         var a = document.getElementById('link');
-        var redirect_href = "mailto:drimacus182@gmail.com?subject=Test_email_subject"
+        var redirect_href = "mailto:" + encodeURIComponent(params.to) + 
+                            "?subject=" + encodeURIComponent(params.subject) + 
+                            "&body=" + encodeURIComponent(params.body);
+
         a.href = redirect_href;
         a.innerHTML = a.href;
-
 
         window.location.href = redirect_href;
     </script>
